Update entrypoint.sh